# dagorama

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml
app/: io.py  model.py  workflow_runnner.py
dagorama/: __init__.py  io.py  model.py  workflow_runnner.py
tests/: pytest.ini  test_workflow_runner.py
tests/data/: workflow_1.json  workflow_2.json
tests/data/error_conditions/: 2_root.json  looped.json  no_root.json  orphan_node.json
